# agent_search

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: main.py
apps/api/app/agents/: course_crawler_agent.py  expansion_agent.py  feedback_agent.py  github_discovery_agent.py  intent_agent.py  query_strategy_agent.py  search_engine_agent.py
apps/api/app/core/: budget.py  config.py  logging.py  metrics.py  state_machine.py
apps/api/app/engines/: dedupe_engine.py  packaging_engine.py  ranking_engine.py  source_policy_engine.py
apps/api/app/orchestration/: orchestrator.py
apps/api/app/schemas/: api.py  candidate.py  events.py  file_result.py  intent.py  query_plan.py  search_state.py  verified_candidate.py
apps/api/app/services/: brave_search.py  downloader.py  github_api.py  hashing.py  openai_client.py  page_fetcher.py  pdf_reader.py  storage.py  zip_service.py
apps/api/app/storage/: db.py  models.py
apps/api/app/utils/: filenames.py  scoring.py  text_similarity.py
apps/api/app/verifiers/: format_verifier.py  institution_verifier.py  semantic_verifier.py  transport_verifier.py
apps/api/app/workers/: broker.py  tasks.py
apps/api/tests/: conftest.py
apps/api/tests/e2e/: test_api_job_routes.py
apps/api/tests/integration/: test_orchestrator_pipeline.py
apps/api/tests/unit/: test_budget.py  test_dedupe_engine.py  test_format_verifier.py  test_github_api.py  test_github_discovery_agent.py  (+4 more)
(+21 files in other folders)
